wxc/include/ewxw/wxc_glue.h


TClass(wxListBox) wxListBox_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), TArrayString(n,str), int _stl );

int        wxListBox_GetSelections( TSelf(wxListBox) _obj, int* aSelections, int allocated );

void       wxListBox_InsertItems( TSelf(wxListBox) _obj, void* items, int pos, int count );

TBool      wxListBox_IsSelected( TSelf(wxListBox) _obj, int n );

void       wxListBox_SetFirstItem( TSelf(wxListBox) _obj, int n );